--- a/index.html
+++ b/index.html
@@ -74,21 +74,19 @@
     }
     #abilityStatus {
       position: absolute;
-      top: 40px;
-      width: 100%;
-      text-align: center;
-      font-size: 18px;
-      color: #333;
+      top: 100px;
+      left: 20px;
       z-index: 10;
       display: flex;
-      flex-direction: column; /* 改為縱列排列 */
+      flex-direction: column;
+      align-items: flex-start;
     }
     .ability {
       padding: 10px;
       margin: 5px;
       background-color: rgba(255, 255, 255, 0.7);
       border-radius: 5px;
-      width: 100px;
+      width: 150px;
     }
   </style>
 </head>
@@ -300,7 +298,7 @@
     }
 
     // 遊戲循環
-    function gameLoop(timestamp) {
+    function gameLoop() {
       if (isGameOver) return;
 
       update();
@@ -310,8 +308,7 @@
       if (effectDurations.speed > 0) effectDurations.speed -= 0.1;
 
       updateAbilityStatus();
-
-      setTimeout(() => gameLoop(timestamp), speed);
+      setTimeout(gameLoop, speed);
     }
   </script>
 </body>
