--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <script>
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
-    const box = 20;
+    const box = 20; // 方塊的尺寸
     let snake;
     let direction;
     let food = [];
@@ -169,16 +169,20 @@
     function draw() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-      // 繪製蛇
+      // 繪製蛇的每一節為圓形
       snake.forEach((segment, index) => {
         ctx.fillStyle = getGradientColor(index, snake.length);
-        ctx.fillRect(segment.x, segment.y, box, box);
+        ctx.beginPath();
+        ctx.arc(segment.x + box / 2, segment.y + box / 2, box / 2, 0, Math.PI * 2); // 畫圓形
+        ctx.fill();
       });
 
       // 繪製食物
       food.forEach(f => {
         ctx.fillStyle = f.color; // 使用食物的固定顏色
-        ctx.fillRect(f.x, f.y, box, box);
+        ctx.beginPath();
+        ctx.arc(f.x + box / 2, f.y + box / 2, box / 2, 0, Math.PI * 2); // 畫圓形
+        ctx.fill();
       });
     }
 
@@ -234,44 +238,35 @@
       const gameOverScreen = document.getElementById('gameOver');
       gameOverScreen.style.display = 'none';
 
-      playerName = document.getElementById('playerName').value.trim();
-      if (!playerName) return alert("請輸入名字");
+      playerName = document.getElementById('playerName').value || '玩家';
+      leaderboard.push({ name: playerName, score: 0 });
+      leaderboard = leaderboard.slice(-5);  // 保留前5名
 
-      document.getElementById('nameForm').style.display = 'none';
-      snake = [{ x: 3 * box, y: 3 * box }];
+      localStorage.setItem('leaderboard', JSON.stringify(leaderboard));
+
+      snake = [{ x: 60, y: 60 }];
       direction = 'RIGHT';
       food = [];
+      isGameOver = false;
       generateFood();
-      isGameOver = false; // 重新開始時設為遊戲未結束
+
+      updateLeaderboard();
       requestAnimationFrame(gameLoop);
     }
 
-    // 遊戲結束並重置
+    // 結束遊戲
     function endGame() {
-      const score = snake.length - 1;
-      leaderboard.push({ name: playerName, score: score });
-      leaderboard.sort((a, b) => b.score - a.score); // 排序排行榜
-      if (leaderboard.length > 5) leaderboard = leaderboard.slice(0, 5); // 只保留前5名
+      isGameOver = true;
+      const gameOverScreen = document.getElementById('gameOver');
+      gameOverScreen.style.display = 'block';
+      document.getElementById('endMessage').textContent = `得分: ${snake.length - 1}`;
+      
+      leaderboard.push({ name: playerName, score: snake.length - 1 });
+      leaderboard = leaderboard.sort((a, b) => b.score - a.score).slice(0, 5);  // 排名
       localStorage.setItem('leaderboard', JSON.stringify(leaderboard));
       updateLeaderboard();
-
-      // 顯示遊戲結束畫面
-      const gameOverScreen = document.getElementById('gameOver');
-      const endMessage = document.getElementById('endMessage');
-      
-      if (score <= 10 && score >= 5) {
-        endMessage.innerHTML = '有點東西';
-      } else if (score > 10) {
-        endMessage.innerHTML = '你是我的神';
-      } else {
-        endMessage.innerHTML = '菜就多練';
-      }
-
-      gameOverScreen.style.display = 'block';
-      isGameOver = true;
     }
 
-    updateLeaderboard(); // 顯示排行榜
   </script>
 </body>
 </html>
