--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     let isGameOver = false;
 
     // 擴大碰撞範圍的大小
-    const collisionBuffer = 10; // 增加的碰撞範圍（可以調整）
+    const collisionBuffer = 5; // 增加的碰撞範圍（可以調整）
 
     // 顯示排行榜
     function updateLeaderboard() {
@@ -143,9 +143,10 @@
 
       // 擴大碰撞範圍的判定
       if (
-        head.x < -collisionBuffer || head.x >= canvas.width + collisionBuffer ||
-        head.y < -collisionBuffer || head.y >= canvas.height + collisionBuffer ||
-        snake.some(segment => {
+        head.x < 0 || head.x >= canvas.width ||
+        head.y < 0 || head.y >= canvas.height ||
+        snake.some((segment, index) => {
+          if (index === 0) return false; // 排除頭部自己
           // 在每一節蛇身周圍擴大範圍進行判斷
           return (
             head.x >= segment.x - collisionBuffer &&
@@ -240,20 +241,16 @@
       touchMove.y = 0;
     });
 
-    // 開始遊戲
+    // 初始化遊戲
     function startGame() {
-      const gameOverScreen = document.getElementById('gameOver');
-      gameOverScreen.style.display = 'none';
-
-      playerName = document.getElementById('playerName').value.trim();
-      if (!playerName) return alert("請輸入名字");
-
-      document.getElementById('nameForm').style.display = 'none';
+      playerName = document.getElementById('playerName').value || '玩家';
       snake = [{ x: 100, y: 100 }];
       direction = 'RIGHT';
       food = [];
       generateFood();
       isGameOver = false;
+      document.getElementById('gameOver').style.display = 'none';
+      document.getElementById('nameForm').style.display = 'none';
       requestAnimationFrame(gameLoop);
     }
 
